tests/test_assets/semantic/invalid/switch/non_exhaustive_enum.expected
semantic error at line 11: non-void function may not return a value
1 semantic error generated.
